--- a/style.css
+++ b/style.css
@@ -4,6 +4,35 @@ body {
   background: #f4f4f4;
 }
 
+/* BANNER */
+.banner {
+  background-image: url("imagem/huambo.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+}
+
+.overlay h1 {
+  font-size: 40px;
+  margin: 0;
+}
+
+.overlay p {
+  font-size: 18px;
+}
+
+/* HEADER */
 header {
   background: #1e7f3b;
   color: white;
@@ -11,6 +40,7 @@ header {
   text-align: center;
 }
 
+/* CONTEÚDO */
 main {
   padding: 20px;
 }
@@ -53,36 +83,9 @@ main {
   border-radius: 4px;
 }
 
+/* FOOTER */
 footer {
   text-align: center;
   padding: 10px;
   background: #ddd;
-}
-.banner {
-  background-image: url("images/huambo.jpg");
-  background-size: cover;
-  background-position: center;
-  height: 300px;
-  position: relative;
-}
-
-/* camada escura por cima da imagem */
-.overlay {
-  background: rgba(0, 0, 0, 0.5);
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  text-align: center;
-}
-
-.overlay h1 {
-  font-size: 40px;
-  margin: 0;
-}
-
-.overlay p {
-  font-size: 18px;
 }
