--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   
-  background: red !important;
-
-
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background: #f4f4f4;
 }
 
 /* BANNER */
